Closed
Bug 1186886
Opened 10 years ago
Closed 10 years ago
Fullscreen browser has misplaced command button cutout
Categories
(Core :: Widget: Win32, defect)
Tracking
()
VERIFIED
FIXED
mozilla42
People
(Reporter: jimm, Assigned: jimm)
References
Details
(Keywords: regression)
Attachments
(2 files, 1 obsolete file)
|
1.02 KB,
image/png
|
Details | |
|
2.50 KB,
patch
|
jimm
:
review+
lmandel
:
approval-mozilla-aurora+
lmandel
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
STR:
1) open nightly to about blank
2) hit f11 to get into fullscreen
result: see screenshot of the top of the window at the display edge
[Tracking Requested - why for this release]:
bad drawing regressions related to windows 10 command button work.
| Assignee | ||
Comment 1•10 years ago
|
||
There's a good chance this is out on aurora and beta too, or at least might be headed there through uplifts.
Keywords: qawanted
Comment 2•10 years ago
|
||
Pushlog:
https://hg.mozilla.org/integration/fx-team/pushloghtml?fromchange=7f2ddcfe4537&tochange=47564df54abe
regressed by: Bug 1173725
Blocks: 1173725
Keywords: regressionwindow-wanted
Comment 3•10 years ago
|
||
[Tracking Requested - why for this release]: affected aurora41.0a2 and beta40 latest tinderbox build
status-firefox40:
--- → affected
status-firefox41:
--- → affected
tracking-firefox40:
--- → ?
tracking-firefox41:
--- → ?
Comment 4•10 years ago
|
||
Tracking Windows 10 regression. ni dolske and smooney as we need to get someone on this immediately.
Updated•10 years ago
|
Blocks: theme-win10
| Assignee | ||
Updated•10 years ago
|
Assignee: nobody → jmathies
| Assignee | ||
Comment 5•10 years ago
|
||
That early return we added without setting the clear region caused this. Comments in the patch explain the changes.
Attachment #8638103 -
Flags: review?(jaws)
Comment 6•10 years ago
|
||
Comment on attachment 8638103 [details] [diff] [review]
patch
Review of attachment 8638103 [details] [diff] [review]:
-----------------------------------------------------------------
::: widget/windows/nsWindow.cpp
@@ +3724,4 @@
> nsIntRegion clearRegion;
> if (!HasGlass() || !nsUXThemeData::CheckForCompositor()) {
> + // Make sure and clear old regions we've set previously. Note HasGlass can be false
> + // for glass desktops if the window we are rendering too doesn't make use of glass.
s/too/to/
I'd also say "doesn't make use of glass (e.g. fullscreen browsing)".
Attachment #8638103 -
Flags: review?(jaws) → review+
Updated•10 years ago
|
Status: NEW → ASSIGNED
Flags: needinfo?(smooney)
Flags: needinfo?(dolske)
| Assignee | ||
Comment 7•10 years ago
|
||
updated, thanks.
Attachment #8638103 -
Attachment is obsolete: true
Attachment #8638118 -
Flags: review+
Comment 9•10 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
Updated•10 years ago
|
Flags: qe-verify+
QA Contact: cornel.ionce
Comment 10•10 years ago
|
||
ni Florin to see if his team can verify this fix on Nightly so that we can consider it for uplift for beta8.
jimm - What do you think about uplifting this fix for beta8?
Flags: needinfo?(jmathies)
Flags: needinfo?(florin.mezei)
Comment 11•10 years ago
|
||
Confirming the fix on Windows 10 64-bit using latest Nightly, build ID: 20150726030217.
| Assignee | ||
Comment 12•10 years ago
|
||
(In reply to Cornel Ionce [QA] from comment #11)
> Confirming the fix on Windows 10 64-bit using latest Nightly, build ID:
> 20150726030217.
The bug was on non-windows 10 systems?
Flags: needinfo?(jmathies)
| Assignee | ||
Updated•10 years ago
|
Flags: qe-verify?
Flags: qe-verify+
Flags: needinfo?(cornel.ionce)
| Assignee | ||
Comment 13•10 years ago
|
||
(In reply to Lawrence Mandel [:lmandel] (use needinfo) from comment #10)
> ni Florin to see if his team can verify this fix on Nightly so that we can
> consider it for uplift for beta8.
>
> jimm - What do you think about uplifting this fix for beta8?
I don't think we have a choice since it's such an obvious drawing bug that impacts our most popular operating system.
| Assignee | ||
Comment 14•10 years ago
|
||
Comment on attachment 8638118 [details] [diff] [review]
patch v.2
Approval Request Comment
[Feature/regressing bug #]:
regression from bug 1173725
[User impact if declined]:
ugly drawing bug in main browser ui
[Describe test coverage new/current, TreeHerder]:
very little since it's a platform feature. fix is on mc.
[Risks and why]:
low, cosmetic in nature. We're not going to break anything major with this change.
[String/UUID change made/needed]:
none
Attachment #8638118 -
Flags: approval-mozilla-beta?
Attachment #8638118 -
Flags: approval-mozilla-aurora?
Comment 15•10 years ago
|
||
Comment on attachment 8638118 [details] [diff] [review]
patch v.2
Fix is verified and the issue is very user visible. We'll take the fix in beta8. Beta+ Aurora+
Attachment #8638118 -
Flags: approval-mozilla-beta?
Attachment #8638118 -
Flags: approval-mozilla-beta+
Attachment #8638118 -
Flags: approval-mozilla-aurora?
Attachment #8638118 -
Flags: approval-mozilla-aurora+
Comment 16•10 years ago
|
||
Comment 17•10 years ago
|
||
Comment 18•10 years ago
|
||
I've reproduced this issue on Firefox 40 beta 7, buildID 20150723165742.
I've also tested on Windows 7 x64 and Windows 8.1 x86.
Confirming the fix for 40 beta 8, build ID: 20150727174134
Flags: needinfo?(cornel.ionce)
Updated•10 years ago
|
Flags: qe-verify?
You need to log in
before you can comment on or make changes to this bug.
Description
•