Bug 1186886 - Reset the command button clear region when command buttons are not visible. r=jaws, a=lmandel

--HG--
extra : transplant_source : %A5%1F%96%D3%9D%22%87%D6%E0qg%EEd%99%E6%3F%EF%21%A1%0E